Changes in version 11.1, 10/05/2023
===================================

* PreSieve.cpp: Vectorize loop using ARM NEON.
* primesieve.h: Fix -Wstrict-prototypes warning.
* examples/c/*.c: Fix -Wstrict-prototypes warning.
* test/*.c: Fix -Wstrict-prototypes warning.
* scripts/build_mingw64_x64.sh: Build primesieve x64 release binary.
* scripts/build_mingw64_arm64.sh: Build primesieve arm64 release binary.

Changes in version 11.0, 02/12/2022
===================================

The primesieve major version has been increased from 8 to 11 in order
for the primesieve major version to match the libprimesieve.so (ABI)
version. From now on, the primesieve version and the libprimesieve.so
version will be kept in sync.

The libprimesieve C API and ABI remain backwards compatible with
primesieve-8.*. In primesieve-11.0 the C primesieve_skipto() function
has been marked as deprecated and primesieve_jump_to() has been added
as a replacement.

The libprimesieve C++ API and ABI are not backwards compatible. The
primesieve::iterator::skipto() method has been removed and replaced by
the new primesieve::iterator::jump_to().

Please note that the new primesieve_jump_to(iter, start, stop) includes
the start number (generates primes >= start), whereas the old
primesieve_skipto(iter, start, stop) excludes the start number
(generates primes > start). In practice, the use of primesieve_jump_to()
requires up to 2x less start number corrections (e.g. start-1) compared
to primesieve_skipto().

* CMakeLists.txt: Improve Emscripten WebAssembly support.
* iterator.cpp: Add new primesieve::iterator::jump_to().
* iterator.cpp: Fix use after free in primesieve::iterator::clear().
* iterator-c.cpp: Add new primesieve_jump_to().
* iterator-c.cpp: Mark primesieve_skipto() as deprecated.
* iterator-c.cpp: Fix use after free in primesieve_iterator_clear().
* pod_vector.hpp: Added support for types with destructors.
* malloc_vector.hpp: Fix potential memory leak.